src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Direct Lead Process</fullName>
        <description>Leads Process for TES Direct Sales Team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Already in MSL</fullName>
        </values>
        <values>
            <fullName>Already in SD3</fullName>
        </values>
        <values>
            <fullName>Awaiting Verification</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Needs More Information</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>THE Leads Process</fullName>
        <description>Leads Process for THE</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Ad_Number__c</fullName>
        <inlineHelpText>If lead has decided to book an advert, please specify the ad number from MSL.</inlineHelpText>
        <label>Ad Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ages__c</fullName>
        <label>Ages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associations__c</fullName>
        <inlineHelpText>Please specify if the school is affiliated with any associations (FOBBISEA, COBIS, etc).</inlineHelpText>
        <label>Associations (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Town__c</fullName>
        <label>City/Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ag. Lge non-PPA/NPA 12.5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ag. Med non-PPA/NPA 10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ag. Sml non-PPA/NPA 0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Local Authority 0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Local Authority 10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Local Authority 12.5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Local Authority 15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency NPA/PPA 12.5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency PPA Mem. 10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency UK Major 15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity Overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity Overseas EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Overseas EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Overseas NonEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Overseas EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company Overseas NonEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O/seas Ag. NonEU 0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O/seas Ag. NonEU 10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O/seas Ag. NonEU 12.5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O/seas Ag. NonEU 15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O/seas Ag. NonEU 25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O/seas Ag. NonEU 27.5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O/seas Ag. NonEU 30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Institution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>ABKHAZIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AKROTIRI AND DHEKELIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAN SAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA AND BARBUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASHMORE AND CARTIER ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZORES, AUTONOMOUS REGION OF THE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County_State__c</fullName>
        <label>County/State</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>Anglesey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caernarfonshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conwy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County Fermanagh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galloway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glasgow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humberside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isle Of Barra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isle Of Islay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isle Of Tiree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isles Of Scilly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manchester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morayshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pont</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rhondda Cynon Taff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scottish Isles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Humberside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sussex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teesside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tyrone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Dunbartonshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Dunbarton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yorkshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aberdeen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armagh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banffshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belfast</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Curriculum_s__c</fullName>
        <label>Curriculum(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <label>Customer Group</label>
        <picklist>
            <controllingField>Client_Type__c</controllingField>
            <picklistValues>
                <fullName>Academy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academy Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further/Higher Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ind. Prepatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent MultiPhase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Prep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent PrePrep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Special</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intra Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Education Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Phase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Limited Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Reg. Charity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLC Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pupil Referral Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Fax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <picklist>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Boys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Girls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_a_school__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is a school</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bill To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill To and Employer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lock_When_Converted__c</fullName>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lock When Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSL_Email__c</fullName>
        <inlineHelpText>The email that gets populated on the client record in MSL. Generally, the Finance/Billing email of the client.</inlineHelpText>
        <label>School/Company Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSL_Id__c</fullName>
        <inlineHelpText>Specify if the School/Institution exists in MSL.</inlineHelpText>
        <label>MSL Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NOR__c</fullName>
        <label>NOR</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sixth Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further 16+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Further (Other)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-phase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_1__c</fullName>
        <label>Region 1</label>
        <picklist>
            <picklistValues>
                <fullName>Classified</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_2__c</fullName>
        <label>Region 2</label>
        <picklist>
            <controllingField>Region_1__c</controllingField>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_3__c</fullName>
        <label>Region 3</label>
        <picklist>
            <controllingField>Region_2__c</controllingField>
            <picklistValues>
                <fullName>England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Group_if_applicable__c</fullName>
        <inlineHelpText>Please specify the school group if the school if part of a group i.e. GEMS education.</inlineHelpText>
        <label>School Group (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Id__c</fullName>
        <inlineHelpText>Specify if the School exists in SD3.</inlineHelpText>
        <label>School Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Type__c</fullName>
        <label>School Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mainstream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secure Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pupil Referral Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>Account Co-Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Co-ordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessm. Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bursar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering Mgr/Superv.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chair of Governors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chancellor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Sci. Lab. Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dep Vice Chancellor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Director of Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund Raising Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold / Silver Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of assessment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.THE_Leads</value>
        </filters>
        <label>All Open Leads</label>
        <sharedTo>
            <role>THE_Commercial</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AlreadyInMSLSD3</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>MSL_Email__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Already in MSL,Already in SD3</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.TES_Direct_Leads</value>
        </filters>
        <label>7: Already in MSL/SD3</label>
        <sharedTo>
            <group>Direct_Sales_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AlreadyinMSLSD3ClientMgr</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>MSL_Email__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Already in MSL,Already in SD3</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.TES_Direct_Leads</value>
        </filters>
        <label>5: Already in MSL/SD3</label>
        <sharedTo>
            <roleAndSubordinates>Client_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Awaiting_Verification</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>MSL_Email__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Awaiting Verification</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.TES_Direct_Leads</value>
        </filters>
        <label>3: Awaiting Verification</label>
        <sharedTo>
            <group>Direct_Sales_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>MSL_Email__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CONVERTED</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.TES_Direct_Leads</value>
        </filters>
        <label>1: My Leads</label>
        <sharedTo>
            <group>Direct_Sales_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.THE_Leads</value>
        </filters>
        <label>My Unread Leads</label>
        <sharedTo>
            <role>THE_Commercial</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Needs_More_Info</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>MSL_Email__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Needs More Information</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.TES_Direct_Leads</value>
        </filters>
        <label>4: Needs More Info</label>
        <sharedTo>
            <group>Direct_Sales_Team</group>
        </sharedTo>
    </listViews>
</CustomObject>